fix alignments & sizing

--- a/src/assets/sass/layout/_login.scss
+++ b/src/assets/sass/layout/_login.scss
@@ -124,7 +124,7 @@
     }
 }
 
-.forgot-container {
+.auth-container {
     background-image: url("../../layout/images/pages/bg-auth.svg");
     background-size: cover;
     background-repeat: no-repeat;
